internal/translator/testdata/basic_tcpproxy/input.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tcpproxy-test
spec:
  virtualhost:
    fqdn: "tcpproxy-test.domain.com"
    tls:
      secretName: "secret"
  tcpproxy:
    services:
    - name: s1
      port: 80
