internal/translator/testdata/basic_tcpproxy/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tcpproxy-test
spec:
  tcpproxy:
    services:
    - name: s1
      port: 80
  virtualhost:
    fqdn: tcpproxy-test.domain.com
    tls:
      secretName: secret
status: {}
